Kubernetes/charts/grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: skybooker
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
   - http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: grafana  # your grafana service name
               port:
                 number: 3000
